run_728/quality/slurm-66616431.out
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
* Date:                 Thu Feb 22 13:41:11 CET 2024
* Job name:             stc.sh
* Job id:               66616431
* User:                 ikovalen
* Account:              nemo
* Submit host:          cca012
* Partition:            htc
* Quality of service:   normal
* Nodelist:             ccwslurm0005
****************************************************************
   ------------------------------------------------------------
  | Welcome to ROOT 6.16/00                  https://root.cern |
  |                               (c) 1995-2018, The ROOT Team |
  | Built for linuxx8664gcc on Jan 23 2019, 09:06:13           |
  | From tags/v6-16-00@v6-16-00                                |
  | Try '.help', '.demo', '.license', '.credits', '.quit'/'.q' |
   ------------------------------------------------------------


Processing /sps/nemo/scratch/ikovalen/SuperNEMO_project/run_728/quality/quality_events_search.cpp...
In file included from input_line_10:1:
/sps/nemo/scratch/ikovalen/SuperNEMO_project/run_728/quality/quality_events_search.cpp:53:7: error: no matching member function for call to 'Fill'
                        h->Fill(quality);
                        ~~~^~~~
/sps/nemo/sw/BxCppDev/var/BxWork/root-6.16.00/build.d/include/TH1.h:215:21: note: candidate function not viable: no known conversion from 'double [NBINS]' to 'Double_t' (aka 'double') for 1st argument
   virtual Int_t    Fill(Double_t x);
                    ^
/sps/nemo/sw/BxCppDev/var/BxWork/root-6.16.00/build.d/include/TH1.h:216:21: note: candidate function not viable: requires 2 arguments, but 1 was provided
   virtual Int_t    Fill(Double_t x, Double_t w);
                    ^
/sps/nemo/sw/BxCppDev/var/BxWork/root-6.16.00/build.d/include/TH1.h:217:21: note: candidate function not viable: requires 2 arguments, but 1 was provided
   virtual Int_t    Fill(const char *name, Double_t w);
                    ^
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
Date: Thu Feb 22 13:41:14 CET 2024
Job informations can be found using these commands:
Accounting:
sacct -j 66616431
Efficiency:
seff 66616431
****************************************************************
